--- a/packages/clay-css/src/scss/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/variables/_dropdowns.scss
@@ -439,7 +439,6 @@ $dropdown-section-custom-control-label: () !default;
 $dropdown-section-custom-control-label-text: () !default;
 $dropdown-section-custom-control-label-text: map-deep-merge(
 	(
-		display: block,
 		padding-left: 2rem,
 	),
 	$dropdown-section-custom-control-label-text
